roles/home-assistant/templates/00_namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    name: homeassistant
