roles/home-assistant/templates/06_network.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: homeassistant
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: 'websecure'
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  rules:
    - host: homeassistant.turing.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: homeassistant
                port:
                  number: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: z2m-ingress
  namespace: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: 'websecure'
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  rules:
    - host: z2m.turing.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: zigbee2mqtt
                port:
                  number: 1880
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-red-ingress
  namespace: homeassistant
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: 'websecure'
    traefik.ingress.kubernetes.io/router.tls: 'true'
spec:
  rules:
    - host: nodered.turing.local
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: node-red
                port:
                  number: 1880
